--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -1,1 +1,17 @@
-/* this is a stylesheet file */
+html, body {
+    height: 100%;
+}
+
+.login-panel {
+    height: 100%;
+}
+
+.form-panel {
+    width: 100%;
+    height: 100%;
+}
+
+.logo-panel {
+    width: 100%;
+    height: 100%;
+}
