add all to deploy

--- a/app/templates/reclamacao/new.html
+++ b/app/templates/reclamacao/new.html
@@ -1,10 +1,10 @@
 {% extends './layout.html' %}
 
 
-{% block sign_content %}
+{% block content %}
   <div class="login-panel d-flex">
     <div class="form-panel">
-      {% include 'login/form.html' %}
+      {% include 'reclamacao/form.html' %}
     </div>
   </div>
 {% endblock %}
