--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -1,17 +1,87 @@
+@import url('https://fonts.googleapis.com/css?family=Bebas+Neue&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Ubuntu&display=swap');
+
+* {
+  list-style: none;
+  padding: 0;
+  margin-bottom: 0;
+}
+
+a:hover {
+  text-decoration: none;
+}
+
+a, p, btn {
+  font-family: 'Ubuntu', sans-serif;
+}
+
+h1, h2, h3, h4, h5, h6 {
+  font-family: 'Bebas Neue', cursive;
+}
+
 html, body {
-    height: 100%;
+  height: 100%;
+  background-color: #ecf1f8 !important;
+  color: #333;
+  max-width: 100%;
 }
 
 .login-panel {
-    height: 100%;
+  height: 100%;
+  background-image: url('../img/login_cover.svg');
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.login {
+  padding: 2rem;
 }
 
 .form-panel {
-    width: 100%;
-    height: 100%;
+  width: 100%;
+  height: 100%;
+  padding: 1rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .logo-panel {
-    width: 100%;
-    height: 100%;
+  height: 100%;
 }
+
+.navigation {
+  background-color: #fff;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: .75rem;
+}
+
+.navigation-items {
+  display: flex;
+  flex-direction: row;
+  margin: 0;
+}
+
+.navigation-link {
+  margin-right: 1rem;
+}
+
+.home-panel {
+  height: 80%;
+  margin: 0;
+}
+
+.img {
+  width: 200px;
+}
+
+.join-text {
+  font-size: 10pt;
+}
+
+.file-upload-label {
+  width: 100%;
+}
+
