--- a/app/templates/cadastro/index.html
+++ b/app/templates/cadastro/index.html
@@ -4,7 +4,7 @@
 {% block sign_content %}
   <div class="login-panel d-flex">
     <div class="form-panel">
-      {% include 'login/form.html' %}
+      {% include 'cadastro/form.html' %}
     </div>
   </div>
 {% endblock %}
