--- a/app/templates/index/index.html
+++ b/app/templates/index/index.html
@@ -2,5 +2,18 @@
 
 
 {% block content %}
-  <h1>Dalton Felipe</h1>
+  <div class="home-panel d-flex flex-row justify-content-around align-items-center">
+    <div class="d-flex flex-column justify-content-around align-items-center">
+      <img src="/img/lamp.png" class="img rounded-circle mb-2">
+      <h4>Problemas em aberto</h4>
+    </div>
+    <div class="d-flex flex-column justify-content-around align-items-center">
+      <img src="/img/lamp_good.png" class="img rounded-circle mb-2">
+      <h4>Problemas solucionados</h4>
+    </div>
+    <a class="d-flex flex-column justify-content-around align-items-center" href="{{ url_for('reclamacao.new_reclamacao') }}">
+      <img src="/img/megaphone.svg" class="img rounded-circle mb-2">
+      <h4>Fazer uma reclamação</h4>
+    </a>
+  </div>
 {% endblock %}
