--- a/app/templates/cadastro/index.html
+++ b/app/templates/cadastro/index.html
@@ -2,6 +2,8 @@
 
 
 {% block sign_content %}
+  {% include "partials/alerts.html" %}
+
   <div class="login-panel d-flex">
     <div class="form-panel">
       {% include 'cadastro/form.html' %}
