--- a/app/templates/login/form.html
+++ b/app/templates/login/form.html
@@ -8,6 +8,6 @@
       <input class="form-control" type="password" placeholder="Senha">
     </div>
     <button class="btn btn-primary mb-4 w-100"> Entrar</button>
-    <p class="join-text text-center">Ainda não possui conta? <a href="{{ url_for('cadastro.index_cadastro') }}">Cadastre-se</a></p>
+    <p class="join-text text-center">Ainda não possui conta? <a href="{{ url_for('cadastro.new_cadastro') }}">Cadastre-se</a></p>
   </form>
 </div>
