--- a/app/templates/partials/navigation.html
+++ b/app/templates/partials/navigation.html
@@ -1,4 +1,4 @@
-<nav class="navigation">
+<nav class="navigation shadow-sm">
   <a href="{{ url_for('index.index') }}"><h1 class="h3">Logo</h1></a>
   <ul class="navigation-items">
     <li class="navigation-link"><a href="#">Ajuda</a></li>
