--- a/app/templates/cadastro/form.html
+++ b/app/templates/cadastro/form.html
@@ -1,17 +1,17 @@
 <div class="login shadow-sm rounded bg-white col-10 col-md-3 p-4">
   <h1 class="h3">Cadastre-se</h1>
-  <form action="">
+  <form action="" method="post">
     <div class="form-group">
-      <input class="form-control" type="text" placeholder="Nome" />
+      <input class="form-control" name="nome" type="text" placeholder="Nome" />
     </div>
     <div class="form-group">
-      <input class="form-control" type="text" placeholder="Email" />
+      <input class="form-control" name="email" type="email" placeholder="Email" />
     </div>
     <div class="form-group">
-      <input class="form-control" type="password" placeholder="Senha">
+      <input class="form-control" name="senha" type="password" placeholder="Senha">
     </div>
     <div class="form-group">
-      <input class="form-control" type="password" placeholder="Confirmar senha">
+      <input class="form-control" name="confirma_senha" type="password" placeholder="Confirmar senha">
     </div>
     <button class="btn btn-primary mb-4 w-100"> Cadastrar</button>
     <p class="join-text text-center">Ja possui conta? <a href="{{ url_for('login.index_login') }}">Entre</a></p>
