finaliza cadastro de usuarios

--- a/app/templates/cadastro/index.html
+++ b/app/templates/cadastro/index.html
@@ -2,9 +2,9 @@
 
 
 {% block sign_content %}
-  {% include "partials/alerts.html" %}
 
-  <div class="login-panel d-flex">
+  <div class="login-panel">
+    {% include "partials/alerts.html" %}
     <div class="form-panel">
       {% include 'cadastro/form.html' %}
     </div>
