--- a/app/templates/login/index.html
+++ b/app/templates/login/index.html
@@ -3,6 +3,7 @@
 
 {% block sign_content %}
   <div class="login-panel d-flex">
+    {% include "partials/alerts.html" %}
     <div class="form-panel">
       {% include 'login/form.html' %}
     </div>
