--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -21,6 +21,7 @@ h1, h2, h3, h4, h5, h6 {
 
 html, body {
   height: 100%;
+  max-height: 100%;
   background-color: #ecf1f8 !important;
   color: #333;
   max-width: 100%;
@@ -33,9 +34,6 @@ html, body {
   background-size: cover;
 }
 
-.login {
-  padding: 2rem;
-}
 
 .form-panel {
   width: 100%;
