--- a/app/templates/partials/alerts.html
+++ b/app/templates/partials/alerts.html
@@ -2,24 +2,18 @@
 	{% if messages %}
 		{% for category, message in messages %}
 			{% if category == 'danger' %}
-        <!-- <div class="alert alert-{{category}} mx-auto col-11 col-sm-9 col-md-6 col-lg-4 mt-1 mb-0 text-center" role="alert">
-          <i class="fa fa-lg fa-exclamation-triangle"></i> {{message}}
-        </div> -->
-        <div class="p-4">
-          <div class="alert alert-warning alert-dismissible fade show" role="alert">
-            <strong>Holy guacamole!</strong> You should check in on some of those fields below.
+        <div class="p-2">
+          <div class="alert alert-danger col-md-4 alert-dismissible fade show mb-2 mx-auto" role="alert">
+            <strong>Erro!</strong> {{message}}
             <button type="button" class="close" data-dismiss="alert" aria-label="Close">
               <span aria-hidden="true">&times;</span>
             </button>
           </div>
         </div>
 			{% else %}
-        <!-- <div class="alert alert-{{category}} mx-auto col-11 col-sm-9 col-md-6 col-lg-4 mt-1 mb-0 text-center" role="alert">
-          <i class="fa fa-lg fa-info-circle"></i> {{message}}
-        </div> -->
-        <div class="p-4">
-          <div class="alert alert-success alert-dismissible fade show m-2" role="alert">
-            <strong>Holy guacamole!</strong> You should check in on some of those fields below.
+        <div class="p-2">
+          <div class="alert alert-success col-md-4 alert-dismissible fade show mb-2 mx-auto" role="alert">
+            <strong>Sucesso!</strong> {{message}}
             <button type="button" class="close" data-dismiss="alert" aria-label="Close">
               <span aria-hidden="true">&times;</span>
             </button>
