Adicionando Missao, Visao e Valores

--- a/app/templates/sobre/index.html
+++ b/app/templates/sobre/index.html
@@ -8,21 +8,21 @@
       <div>
         <h2>Missão</h2>
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed aliquam iaculis magna, sed malesuada enim rutrum eget. Maecenas et pharetra ipsum, quis aliquam odio.
+          A Reportech tem a missão de agregar tecnologia com sustentabilidade ao entregar ao cliente uma solução ágil e prática para diminuição de desperdícios energéticos e hídricos com um sistema de reporte utilizado pelos usuários da empresa que facilita a comunicação com as devidas soluções e a transparência de informações.
         </p>
       </div>
 
       <div class="mt-4">
         <h2>Visão</h2>
         <p>
-          Aliquam non diam quis velit faucibus scelerisque id vel est. Etiam facilisis vitae purus tempus eleifend. Phasellus blandit felis et neque elementum, eu sollicitudin ipsum faucibus.
+          Estar a frente no desenvolvimento de tecnologias sustentáveis que contribuam para um harmonioso espaço sem limitar os usuários e agregando economia financeira ao cliente.
         </p>
       </div>
 
       <div class="mt-4">
         <h2>Valores</h2>
         <p>
-          Aliquam non diam quis velit faucibus scelerisque id vel est. Etiam facilisis vitae purus tempus eleifend. Phasellus blandit felis et neque elementum, eu sollicitudin ipsum faucibus.
+          Reportech deseja ser reconhecida pela qualidade de agregação de tecnologia com medidas sustentáveis levando ao cliente um produto que evita desperdícios e aos usuários maior aproveitamento das instalações.
         </p>
       </div>
     </div>
