--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -32,6 +32,7 @@ html, body {
   background-image: url('../img/login_cover.svg');
   background-repeat: no-repeat;
   background-size: cover;
+  overflow: hidden
 }
 
 
