--- a/app/templates/cadastro/form.html
+++ b/app/templates/cadastro/form.html
@@ -1,11 +1,11 @@
-<div class="jumbotron bg-light shadow-sm rounded bg-white col-10 col-md-3 p-4">
+<div class="jumbotron shadow-sm rounded bg-white col-11 col-md-3 p-4">
   <h1 class="h3">Cadastre-se</h1>
   <form action="" method="post">
     <div class="form-group">
-      <input class="form-control" name="nome" value="{{ usuario.nome }}" type="text" placeholder="Nome" required />
+      <input class="form-control" name="nome" value="{{ usuario.nome if usuario else '' }}" type="text" placeholder="Nome" required />
     </div>
     <div class="form-group">
-      <input class="form-control" name="email" value="{{ usuario.email }}" type="email" placeholder="Email" required />
+      <input class="form-control" name="email" value="{{ usuario.email if usuario else '' }}" type="email" placeholder="Email" required />
     </div>
     <div class="form-group">
       <input class="form-control" name="senha" type="password" placeholder="Senha" required>
@@ -15,5 +15,6 @@
     </div>
     <button class="btn btn-primary mb-4 w-100"> Cadastrar</button>
     <p class="join-text text-center">Ja possui conta? <a href="{{ url_for('login.index_login') }}">Entre</a></p>
+    <p class="join-text text-center">Voltar a <a href="{{ url_for('index.index') }}">pagina incial</a></p>
   </form>
 </div>
