--- a/app/templates/login/index.html
+++ b/app/templates/login/index.html
@@ -2,7 +2,7 @@
 
 
 {% block sign_content %}
-  <div class="login-panel d-flex">
+  <div class="login-panel">
     {% include "partials/alerts.html" %}
     <div class="form-panel">
       {% include 'login/form.html' %}
