--- a/app/templates/partials/alerts.html
+++ b/app/templates/partials/alerts.html
@@ -3,8 +3,8 @@
 		{% for category, message in messages %}
 			{% if category == 'danger' %}
         <div class="p-2">
-          <div class="alert alert-danger col-md-4 alert-dismissible fade show mb-2 mx-auto" role="alert">
-            <strong>Erro!</strong> {{message}}
+          <div class="alert alert-danger col-12 col-md-5 alert-dismissible fade show mb-2 mx-auto" role="alert">
+            {{message}}
             <button type="button" class="close" data-dismiss="alert" aria-label="Close">
               <span aria-hidden="true">&times;</span>
             </button>
@@ -12,8 +12,8 @@
         </div>
 			{% else %}
         <div class="p-2">
-          <div class="alert alert-success col-md-4 alert-dismissible fade show mb-2 mx-auto" role="alert">
-            <strong>Sucesso!</strong> {{message}}
+          <div class="alert alert-success col-12 col-md-5 alert-dismissible fade show mb-2 mx-auto" role="alert">
+            {{message}}
             <button type="button" class="close" data-dismiss="alert" aria-label="Close">
               <span aria-hidden="true">&times;</span>
             </button>
