--- a/app/templates/partials/navigation.html
+++ b/app/templates/partials/navigation.html
@@ -3,6 +3,10 @@
   <ul class="navigation-items">
     <li class="navigation-link"><a href="#">Ajuda</a></li>
     <li class="navigation-link"><a href="{{ url_for('sobre.index_sobre') }}">Sobre</a></li>
-    <li class="navigation-link"><a href="{{ url_for('login.index_login') }}">Login</a></li>
+    {% if session.logged_in %}
+      <li class="navigation-link"><a href="{{ url_for('login.index_logout') }}"> [{{ session.user_name }}] Sair</a></li>
+    {% else %}
+      <li class="navigation-link"><a href="{{ url_for('login.index_login') }}">Login</a></li>
+    {% endif %}
   </ul>
 </nav>
