--- a/app/templates/reclamacao/form.html
+++ b/app/templates/reclamacao/form.html
@@ -1,14 +1,26 @@
-<div class="login shadow-sm rounded bg-white col-10 col-md-4 p-4">
+<div class="login mt-1 mt-md-4 shadow-sm rounded bg-white col-11 col-md-5 p-4">
   <h1 class="h3 mb-3">Qual o problema?</h1>
-  <form action="">
+  <form action="" method="post">
     <div class="form-group">
-      <input class="form-control" type="text" placeholder="Tipo do problema (agua, luz, central de ar)" />
+      <input class="form-control" name="titulo" type="text" placeholder="Titulo" />
     </div>
     <div class="form-group">
-      <input class="form-control" type="text" placeholder="Local (Campus, prédio, sala)">
+      <div class="row">
+        <div class="col-6">
+          <select name="tipo" class="custom-select" id="">
+            <option selected>Outros</option>
+            <option value="agua">Desperdício de água</option>
+            <option value="energia">Desperdício de energia</option>
+            <option value="poluicao">Ambiente poluído</option>
+          </select>
+        </div>
+        <div class="col-6">
+          <input class="form-control" name="tempo" type="number" placeholder="A quanto tempo? (Em horas)">
+        </div>
+      </div>
     </div>
     <div class="form-group">
-      <input class="form-control" type="text" placeholder="A quanto tempo?">
+      <input class="form-control" name="local" type="text" placeholder="Local (Campus, prédio, sala)">
     </div>
     <div class="form-group">
       <label for="foto">
@@ -17,7 +29,7 @@
       <input class="form-control" id="foto" type="file" placeholder="A quanto tempo?" hidden>
     </div>
     <div class="form-group">
-      <textarea class="form-control" id="" cols="30" rows="4" placeholder="Descrição"></textarea>
+      <textarea class="form-control" name="descricao" cols="30" rows="4" placeholder="Descrição"></textarea>
     </div>
     <button class="btn btn-primary mb-4 w-100">Enviar</button>
   </form>
