--- a/app/templates/reclamacao/form.html
+++ b/app/templates/reclamacao/form.html
@@ -7,7 +7,7 @@
     <div class="form-group">
       <div class="row">
         <div class="col-6">
-          <select name="tipo" class="custom-select" id="">
+          <select name="tipo" class="custom-select">
             <option selected>Outros</option>
             <option value="agua">Desperdício de água</option>
             <option value="energia">Desperdício de energia</option>
