--- a/app/templates/sobre/index.html
+++ b/app/templates/sobre/index.html
@@ -8,7 +8,7 @@
       <div>
         <h2>Missão</h2>
         <p>
-          O <i>Aponta Aí</i> tem a missão de agregar tecnologia com sustentabilidade ao entregar ao cliente uma solução ágil e prática para diminuição de desperdícios energéticos e hídricos com um sistema de reporte utilizado pelos usuários da empresa que facilita a comunicação com as devidas soluções e a transparência de informações.
+          O <i>ApontAÍ</i> tem a missão de agregar tecnologia com sustentabilidade ao entregar ao cliente uma solução ágil e prática para diminuição de desperdícios energéticos e hídricos com um sistema de reporte utilizado pelos usuários da empresa que facilita a comunicação com as devidas soluções e a transparência de informações.
         </p>
       </div>
 
@@ -22,7 +22,7 @@
       <div class="mt-4">
         <h2>Valores</h2>
         <p>
-          O <i>Aponta Aí</i> deseja ser reconhecido pela qualidade de agregação de tecnologia com medidas sustentáveis levando ao cliente um produto que evita desperdícios e aos usuários maior aproveitamento das instalações.
+          O <i>ApontAÍ</i> deseja ser reconhecido pela qualidade de agregação de tecnologia com medidas sustentáveis levando ao cliente um produto que evita desperdícios e aos usuários maior aproveitamento das instalações.
         </p>
       </div>
     </div>
