--- a/app/templates/partials/navigation.html
+++ b/app/templates/partials/navigation.html
@@ -1,5 +1,7 @@
 <nav class="navigation shadow-sm">
-  <a href="{{ url_for('index.index') }}"><h1 class="h3">Logo</h1></a>
+  <a href="{{ url_for('index.index') }}">
+    <img src="/img/logo.svg" alt="">
+  </a>
   <ul class="navigation-items">
     <li class="navigation-link"><a href="#">Ajuda</a></li>
     <li class="navigation-link"><a href="{{ url_for('sobre.index_sobre') }}">Sobre</a></li>
