--- a/app/templates/reclamacao/form.html
+++ b/app/templates/reclamacao/form.html
@@ -8,7 +8,8 @@
       <div class="row">
         <div class="col-6">
           <select name="tipo" class="custom-select" required>
-            <option selected>Outros</option>
+            <option value="" selected hidden>Selecione ...</option>
+            <option value="outros">Outros</option>
             <option value="agua">Desperdício de água</option>
             <option value="energia">Desperdício de energia</option>
             <option value="poluicao">Ambiente poluído</option>
