ajusta formulario de cadastro

--- a/app/templates/reclamacao/form.html
+++ b/app/templates/reclamacao/form.html
@@ -16,7 +16,7 @@
           </select>
         </div>
         <div class="col-6">
-          <input class="form-control" name="tempo" type="number" required placeholder="A quanto tempo? (Em horas)">
+          <input class="form-control" name="tempo" type="number" required placeholder="Há quanto tempo? (Em horas)">
         </div>
       </div>
     </div>
