--- a/app/templates/reclamacao/form.html
+++ b/app/templates/reclamacao/form.html
@@ -1,6 +1,6 @@
 <div class="login mt-3 mt-md-4 shadow-sm rounded bg-white col-11 col-md-5 p-4">
   <h1 class="h3 mb-3">Qual o problema?</h1>
-  <form action="" method="post">
+  <form action="" method="post" enctype="multipart/form-data">
     <div class="form-group">
       <input class="form-control" name="titulo" type="text" placeholder="Titulo" required />
     </div>
@@ -20,7 +20,7 @@
       <label for="foto">
         <img src="/img/file-upload.svg" class="file-upload-label">
       </label>
-      <input class="form-control" id="foto" type="file" hidden>
+      <input class="form-control" id="foto" name="foto" type="file" hidden>
     </div>
     <div class="form-group">
       <textarea class="form-control" name="descricao" required cols="30" rows="4" placeholder="Descrição"></textarea>
