add local para laranjao

--- a/app/templates/reclamacao/form.html
+++ b/app/templates/reclamacao/form.html
@@ -14,7 +14,7 @@
       </select>
     </div>
     <div class="form-group">
-      <input class="form-control" name="local" type="text" required placeholder="Local (Campus, prédio, sala)">
+      <input class="form-control" name="local" value="Campus Tapajós, Laranjão, Auditório" type="text" required placeholder="Local (Campus, prédio, sala)">
     </div>
     <div class="form-group">
       <label for="foto">
