--- a/app/templates/reclamacao/form.html
+++ b/app/templates/reclamacao/form.html
@@ -17,10 +17,8 @@
       <input class="form-control" name="local" value="Campus Tapajós, Laranjão, Auditório" type="text" required placeholder="Local (Campus, prédio, sala)">
     </div>
     <div class="form-group">
-      <label for="foto">
-        <img src="/img/file-upload.svg" class="file-upload-label">
-      </label>
-      <input class="form-control" id="foto" name="foto" type="file" hidden>
+      <label for="file">Faça upload de uma foto</label>
+      <input id="file" class="form-control-file" name="foto" type="file">
     </div>
     <div class="form-group">
       <textarea class="form-control" name="descricao" required cols="30" rows="4" placeholder="Descrição"></textarea>
