--- a/app/templates/reclamacao/form.html
+++ b/app/templates/reclamacao/form.html
@@ -17,7 +17,7 @@
     </div>
     <div class="form-group">
       <label for="local">Localização <strong>*</strong></label>
-      <input class="form-control" maxlength="100" id="local" name="local" value="Campus Tapajós, Laranjão, Auditório" type="text" required placeholder="Local (Campus, prédio, sala)">
+      <input class="form-control" maxlength="100" id="local" name="local" type="text" required placeholder="Local (Campus, prédio, sala)">
     </div>
     <div class="form-group">
       <label for="file">Faça upload de uma foto (opcional)</label>
